Added examining control

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
       <div style="width: 100%; text-align: center; position: fixed;">
         <div id="inventory-bar">
           <span id="inventory-slots"></span>
-          <span id="control-panel">
+          <span id="user-panel">
+            <span id="control-panel">
+              <span id="examining-control">
+                <img src="img/eye_closed.png"/>
+              </span>
+            </span>
             <span id="time-panel">
               <div style="height:33%;">Day 1</div>
               <div style="height:33%;">00:00:00</div>
@@ -54,6 +59,7 @@
     
     <script src="js/view/workshop.js"></script>
     <script src="js/view/utility.js"></script>
+    <script src="js/view/user_panel.js"></script>
     
     <script src="js/main.js"></script>
   </body>
