Completed ID linking and added examine control

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </span>
         <span class="workshop-arrow"><div>&gt;</div></span>
       </div>
-      <div style="width: 100%; text-align: center; position: fixed;">
+      <div style="width: 100%; text-align: center;">
         <div id="inventory-bar">
           <span id="inventory-slots"></span>
           <span id="user-panel">
             <span id="control-panel">
-              <span id="examining-control">
+              <span id="examining-control" onclick="toggleExamining()">
                 <img src="img/eye_closed.png"/>
               </span>
             </span>
