Fixed cauldron rendering

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <span class="workstation" id="cauldron-stand-factory">
         <div class="canvas-container" style="width: 100%; height: 100%;">
           <canvas id="cauldron-canvas" class="drag-target"></canvas>
+          <img id="cauldron-image" style="display: none;" src="img/cauldron_clear.png"/>
         </div>
       </span>
     </div>
@@ -62,6 +63,7 @@
     <script src="js/view/workshop.js"></script>
     <script src="js/view/utility.js"></script>
     <script src="js/view/interface.js"></script>
+    <script src="js/view/cauldron_stand.js"></script>
     
     <script src="js/main.js"></script>
   </body>
