Completed observations implementation

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <script src="js/model/potions.js"></script>
     <script src="js/utility.js"></script>
     <script src="js/model/workshop.js"></script>
+    <script src="js/model/observations.js"></script>
     
     <script src="js/view/workshop.js"></script>
     <script src="js/view/utility.js"></script>
